# AutoHR

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  INSTALL.bat  ISSUES.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
database/: schema.sql
scripts/: sample-employees.js  seed-database.js
src/: api.js  main.js  utils.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  files.rs  lib.rs  main.rs  services.rs
src/screens/: about.js  company.js  dashboard.js  documents.js  employees.js  users.js
src/styles/: main.css
