[package]
name    = "autohr"
version = "1.0.0"
edition = "2021"

[package.metadata.bundle]
name              = "AutoHR"
identifier        = "com.autohr.app"
icon              = ["icons/32x32.png", "icons/128x128.png", "icons/128x128@2x.png", "icons/icon.icns", "icons/icon.ico"]
resources         = ["resources/*"]
copyright         = "Eng. Essam Al-Emaraa"
category          = "Business"
short_description = "HR & Document Management System"

[lib]
name       = "autohr_lib"
path       = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "autohr"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri               = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
rusqlite            = { version = "0.31", features = ["bundled"] }
serde               = { version = "1", features = ["derive"] }
serde_json          = "1"
sha2                = "0.10"
hex                 = "0.4"
chrono              = { version = "0.4", features = ["serde"] }
dirs                = "5"
thiserror           = "1"
